sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {

	for (i<- getNombreValeurs() to 0){
		for (j<- 0 to i){
			if echange(j+1, j)
		}
	}
}














//Pour tout i dans [lgr-2,0] (parcours du plus grand au plus petit)
  //     Pour tout j dans [0, i]
    //      Si les cases j et j+1 doivent être inverser, le faire